@@ -6,10 +6,18 @@ plugins {
     id 'io.qameta.allure' version '2.9.6'
 }
 
+
     configurations {
         agent
     }
 
+
+
+tasks.withType(Test) {
+    useTestNG()
+    // useJUnitPlatform()
+   // jvmArgs '--enable-preview'
+}
 
 
 
